force-app/main/default/objects/Examination__c/Examination__c.object-meta.xml
<CustomObject>
    <label>Осмотр</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Осмотр код</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Осмотры</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>