force-app/main/default/objects/Examination__c/fields/Date_Examination__c.field-meta.xml
<CustomField>
    <fullName>Date_Examination__c</fullName>
    <label>Дата осмотра</label>
    <type>Date</type>
</CustomField>