force-app/main/default/objects/Examination__c/fields/First_Number_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>First_Number_Sick_Leave__c</fullName>
    <label>Номер первичной ВН</label>
    <length>15</length>
    <type>Text</type>
</CustomField>