force-app/main/default/objects/Examination__c/fields/Sick_leave__c.field-meta.xml
<CustomField>
    <fullName>Sick_leave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Больничный</label>
    <referenceTo>Sick_leave__c</referenceTo>
    <relationshipLabel>Осмотры</relationshipLabel>
    <relationshipName>Examination</relationshipName>
    <type>Lookup</type>
</CustomField>