force-app/main/default/objects/Examination__c/fields/TypeExamination__c.field-meta.xml
<CustomField>
    <fullName>TypeExamination__c</fullName>
    <label>Вид осмотра</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Вызов</fullName>
            </value>
            <value>
                <fullName>Приём</fullName>
            </value>
            <value>
                <fullName>Планируется</fullName>
            </value>
            <value>
                <fullName>Звонок</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>