force-app/main/default/objects/Examination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Examination__c</columns>
    <columns>First_Number_Sick_Leave__c</columns>
    <columns>Sick_leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>